@@ -454,6 +454,13 @@ sub _get_filter {
         }
         $op = $op_translation_words->{$op} if $op_translation_words->{$op};
         for my $val (@vals) {
+            # expand relative time filter for some operators
+            if($val =~ m/^\-?\d+\w{1}$/mxo && $op =~ m%^(>|<|>=|<=)$%mx) {
+                my $duration = Thruk::Utils::expand_duration($val);
+                if($duration ne $val) {
+                    $val = time() + $duration;
+                }
+            }
             push @{$filter}, { $key => { $op =>  $val }};
         }
     }
